tos-dream/test_output.txt
   Compiling tos-dream v0.1.0 (/home/tim/TOS-Desktop-Environment/tos-dream)
error[E0308]: mismatched types
  --> src/ui/render/inspector.rs:82:63
   |
82 | ...r().map(|b| if *b >= 32 && *b <= 126 { *b.clone() as char } else { '.' })....
   |                         ^^ expected `&u8`, found integer
   |
help: consider dereferencing the borrow
   |
82 |             let ascii: String = chunk.iter().map(|b| if **b >= 32 && *b <= 126 { *b.clone() as char } else { '.' }).collect();
   |                                                         +

error[E0308]: mismatched types
  --> src/ui/render/inspector.rs:82:75
   |
82 | ...f *b >= 32 && *b <= 126 { *b.clone() as char } else { '.' }).collect();
   |                        ^^^ expected `&u8`, found integer
   |
help: consider dereferencing the borrow
   |
82 |             let ascii: String = chunk.iter().map(|b| if *b >= 32 && **b <= 126 { *b.clone() as char } else { '.' }).collect();
   |                                                                     +

For more information about this error, try `rustc --explain E0308`.
error: could not compile `tos-dream` (lib) due to 2 previous errors
